--- a/resources/assets/stylesheets/app.css
+++ b/resources/assets/stylesheets/app.css
@@ -8772,24 +8772,24 @@ button.close {
 /* VARIABLES */
 /* MIXINS */
 /* GENERAL SITE STYLING */
-/* line 51, ../sass/app.scss */
+/* line 59, ../sass/app.scss */
 html {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-shadow: 0 0 1px rgba(128, 128, 128, 0.01);
 }
 
-/* line 57, ../sass/app.scss */
+/* line 65, ../sass/app.scss */
 *::selection {
   background-color: transparent;
 }
 
-/* line 61, ../sass/app.scss */
+/* line 69, ../sass/app.scss */
 *::-moz-selection {
   background-color: transparent;
 }
 
-/* line 65, ../sass/app.scss */
+/* line 73, ../sass/app.scss */
 * {
   -webkit-user-select: none;
   -moz-user-select: -moz-none;
@@ -8798,7 +8798,7 @@ html {
   -webkit-tap-highlight-color: transparent;
 }
 
-/* line 73, ../sass/app.scss */
+/* line 81, ../sass/app.scss */
 input[type="text"], textarea, [contenteditable] {
   -webkit-user-select: text;
   -moz-user-select: text;
@@ -8806,21 +8806,21 @@ input[type="text"], textarea, [contenteditable] {
   user-select: text;
 }
 
-/* line 80, ../sass/app.scss */
+/* line 88, ../sass/app.scss */
 body {
   font-family: 'Archivo Narrow', serif;
   background-color: #ffffff;
 }
 
 /* ID SPECIFIC */
-/* line 91, ../sass/app.scss */
+/* line 99, ../sass/app.scss */
 #find-all {
   background: url(../../../public/images/allparks.jpg) no-repeat left center;
   background-size: 100%;
   background-position: center;
 }
 @media (min-width: 768px) {
-  /* line 91, ../sass/app.scss */
+  /* line 99, ../sass/app.scss */
   #find-all {
     width: 640px;
     background-position-y: -200px;
@@ -8829,23 +8829,23 @@ body {
 }
 
 /* GENERAL CLASSES */
-/* line 108, ../sass/app.scss */
+/* line 116, ../sass/app.scss */
 .title {
   letter-spacing: 10px;
 }
 
-/* line 112, ../sass/app.scss */
+/* line 120, ../sass/app.scss */
 .sub-title {
   letter-spacing: 3px;
 }
 
-/* line 116, ../sass/app.scss */
+/* line 124, ../sass/app.scss */
 .description {
   font-size: 16px;
   padding: 0 10px;
 }
 
-/* line 121, ../sass/app.scss */
+/* line 129, ../sass/app.scss */
 .reset-btn {
   position: fixed;
   bottom: 2%;
@@ -8864,28 +8864,28 @@ body {
   cursor: pointer;
   font-weight: bold;
 }
-/* line 139, ../sass/app.scss */
+/* line 147, ../sass/app.scss */
 .reset-btn:active {
   opacity: .8;
 }
-/* line 143, ../sass/app.scss */
+/* line 151, ../sass/app.scss */
 .reset-btn i {
   line-height: 30px;
 }
 @media (min-width: 1200px) {
-  /* line 121, ../sass/app.scss */
+  /* line 129, ../sass/app.scss */
   .reset-btn {
     left: 50%;
     right: 0;
     margin-left: -60px;
   }
-  /* line 152, ../sass/app.scss */
+  /* line 160, ../sass/app.scss */
   .reset-btn i {
     margin-left: 1px;
   }
 }
 
-/* line 158, ../sass/app.scss */
+/* line 166, ../sass/app.scss */
 .fire-btn {
   position: fixed;
   bottom: 2%;
@@ -8904,12 +8904,12 @@ body {
   cursor: pointer;
   font-weight: bold;
 }
-/* line 176, ../sass/app.scss */
+/* line 184, ../sass/app.scss */
 .fire-btn:active {
   opacity: .8;
 }
 @media (min-width: 1200px) {
-  /* line 158, ../sass/app.scss */
+  /* line 166, ../sass/app.scss */
   .fire-btn {
     left: 50%;
     right: 0;
@@ -8917,7 +8917,7 @@ body {
   }
 }
 
-/* line 187, ../sass/app.scss */
+/* line 195, ../sass/app.scss */
 .fire-btn-shadow {
   position: fixed;
   bottom: 2%;
@@ -8933,7 +8933,7 @@ body {
   box-shadow: 0px 8px 36px -9px black;
 }
 @media (min-width: 1200px) {
-  /* line 187, ../sass/app.scss */
+  /* line 195, ../sass/app.scss */
   .fire-btn-shadow {
     left: 50%;
     right: 0;
@@ -8941,7 +8941,7 @@ body {
   }
 }
 
-/* line 208, ../sass/app.scss */
+/* line 216, ../sass/app.scss */
 .reset-btn-shadow {
   position: fixed;
   bottom: 2%;
@@ -8958,7 +8958,7 @@ body {
   box-shadow: 0px 8px 36px -9px black;
 }
 @media (min-width: 1200px) {
-  /* line 208, ../sass/app.scss */
+  /* line 216, ../sass/app.scss */
   .reset-btn-shadow {
     left: 50%;
     right: 0;
@@ -8966,31 +8966,31 @@ body {
   }
 }
 
-/* line 230, ../sass/app.scss */
+/* line 238, ../sass/app.scss */
 .center {
   margin: 0 auto;
 }
 
-/* line 234, ../sass/app.scss */
+/* line 242, ../sass/app.scss */
 .text-center {
   text-align: center;
 }
 
-/* line 239, ../sass/app.scss */
+/* line 247, ../sass/app.scss */
 .park-nav ul {
   list-style: none;
   margin: 0;
   padding: 0;
 }
 @media (min-width: 768px) {
-  /* line 239, ../sass/app.scss */
+  /* line 247, ../sass/app.scss */
   .park-nav ul {
     width: 640px;
     margin: 0 auto;
     text-align: center;
   }
 }
-/* line 251, ../sass/app.scss */
+/* line 259, ../sass/app.scss */
 .park-nav ul li {
   position: relative;
   height: 150px;
@@ -8998,7 +8998,7 @@ body {
   margin: 5px 0 5px 0;
 }
 @media (min-width: 768px) {
-  /* line 251, ../sass/app.scss */
+  /* line 259, ../sass/app.scss */
   .park-nav ul li {
     width: 318px;
     /*account for padding*/
@@ -9007,7 +9007,7 @@ body {
     display: inline-block;
   }
 }
-/* line 265, ../sass/app.scss */
+/* line 273, ../sass/app.scss */
 .park-nav ul li p {
   position: absolute;
   bottom: 0;
@@ -9033,7 +9033,7 @@ body {
   -o-transition: all 0.2s ease-out;
   transition: all 0.2s ease-out;
 }
-/* line 287, ../sass/app.scss */
+/* line 295, ../sass/app.scss */
 .park-nav ul li:hover p {
   -webkit-transform: translate(-5px, 0px);
   -moz-transform: translate(-5px, 0px);
@@ -9042,7 +9042,7 @@ body {
   transform: translate(-5px, 0px);
 }
 
-/* line 295, ../sass/app.scss */
+/* line 303, ../sass/app.scss */
 .li-bg {
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
@@ -9051,20 +9051,20 @@ body {
   transition: all 0.2s ease-in-out;
   opacity: .9;
 }
-/* line 298, ../sass/app.scss */
+/* line 306, ../sass/app.scss */
 .li-bg:hover {
   cursor: pointer;
 }
-/* line 301, ../sass/app.scss */
+/* line 309, ../sass/app.scss */
 .li-bg:hover .li-overlay {
   background-color: #fff;
 }
-/* line 305, ../sass/app.scss */
+/* line 313, ../sass/app.scss */
 .li-bg:active {
   opacity: 1;
 }
 
-/* line 310, ../sass/app.scss */
+/* line 318, ../sass/app.scss */
 .li-overlay {
   position: absolute;
   top: 72.5%;
@@ -9080,7 +9080,7 @@ body {
   transition: all 0.5s ease-in-out;
 }
 
-/* line 321, ../sass/app.scss */
+/* line 329, ../sass/app.scss */
 .li-overlay-white {
   position: absolute;
   top: 69%;
@@ -9090,7 +9090,7 @@ body {
   background-color: #fff;
 }
 
-/* line 330, ../sass/app.scss */
+/* line 338, ../sass/app.scss */
 .svg-check {
   display: none;
   position: absolute;
@@ -9102,15 +9102,25 @@ body {
   height: 40px;
 }
 
-/* line 341, ../sass/app.scss */
+/* line 349, ../sass/app.scss */
 footer {
   color: #aec1ae;
   font-size: 10px;
   margin: 10px;
 }
 
+/* TRANSITION SPECIFIC */
+/* line 361, ../sass/app.scss */
+.ani-left {
+  -webkit-transform: translate3d(-2000px, 0, 0);
+  -moz-transform: translate3d(-2000px, 0, 0);
+  -ms-transform: translate3d(-2000px, 0, 0);
+  -o-transform: translate3d(-2000px, 0, 0);
+  transform: translate3d(-2000px, 0, 0);
+}
+
 /* ANIMATION SPECIFIC */
-/* line 353, ../sass/app.scss */
+/* line 371, ../sass/app.scss */
 .zoom-check {
   -webkit-animation: zoomAni 0.5s forwards;
   -moz-animation: zoomAni 0.5s forwards;
@@ -9119,7 +9129,7 @@ footer {
   animation: zoomAni 0.5s forwards;
 }
 
-/* line 357, ../sass/app.scss */
+/* line 375, ../sass/app.scss */
 .zoom-check-reverse {
   -webkit-animation: zoomAniRev 0.5s forwards;
   -moz-animation: zoomAniRev 0.5s forwards;
@@ -9128,7 +9138,7 @@ footer {
   animation: zoomAniRev 0.5s forwards;
 }
 
-/* line 361, ../sass/app.scss */
+/* line 379, ../sass/app.scss */
 .zoom-check-shadow {
   -webkit-animation: zoomAniRevShadow 0.5s forwards;
   -moz-animation: zoomAniRevShadow 0.5s forwards;
@@ -9137,7 +9147,7 @@ footer {
   animation: zoomAniRevShadow 0.5s forwards;
 }
 
-/* line 365, ../sass/app.scss */
+/* line 383, ../sass/app.scss */
 .zoom-check-shadow-reverse {
   -webkit-animation: zoomAniRevShadowRev 0.5s forwards;
   -moz-animation: zoomAniRevShadowRev 0.5s forwards;
@@ -9146,7 +9156,7 @@ footer {
   animation: zoomAniRevShadowRev 0.5s forwards;
 }
 
-/* line 369, ../sass/app.scss */
+/* line 387, ../sass/app.scss */
 .slide-center {
   -webkit-animation: slideAni 0.5s forwards;
   -moz-animation: slideAni 0.5s forwards;
