--- a/resources/assets/stylesheets/app.css
+++ b/resources/assets/stylesheets/app.css
@@ -8828,24 +8828,54 @@ body {
   }
 }
 
+/* line 110, ../sass/app.scss */
+#find-parks-page {
+  display: none;
+  height: 100vh;
+  position: relative;
+  padding: 0;
+  margin: 0 auto;
+  max-height: 100%;
+  /*firefox*/
+  overflow: hidden;
+  width: 768px;
+  max-width: 100%;
+  background-color: grey;
+}
+
 /* GENERAL CLASSES */
-/* line 116, ../sass/app.scss */
+/* line 129, ../sass/app.scss */
 .title {
   letter-spacing: 10px;
+  -webkit-transition: all 1s ease-in-out;
+  -moz-transition: all 1s ease-in-out;
+  -ms-transition: all 1s ease-in-out;
+  -o-transition: all 1s ease-in-out;
+  transition: all 1s ease-in-out;
 }
 
-/* line 120, ../sass/app.scss */
+/* line 134, ../sass/app.scss */
 .sub-title {
   letter-spacing: 3px;
+  -webkit-transition: all 1s ease-in-out;
+  -moz-transition: all 1s ease-in-out;
+  -ms-transition: all 1s ease-in-out;
+  -o-transition: all 1s ease-in-out;
+  transition: all 1s ease-in-out;
 }
 
-/* line 124, ../sass/app.scss */
+/* line 139, ../sass/app.scss */
 .description {
   font-size: 16px;
   padding: 0 10px;
+  -webkit-transition: all 1s ease-in-out;
+  -moz-transition: all 1s ease-in-out;
+  -ms-transition: all 1s ease-in-out;
+  -o-transition: all 1s ease-in-out;
+  transition: all 1s ease-in-out;
 }
 
-/* line 129, ../sass/app.scss */
+/* line 145, ../sass/app.scss */
 .reset-btn {
   position: fixed;
   bottom: 2%;
@@ -8864,28 +8894,28 @@ body {
   cursor: pointer;
   font-weight: bold;
 }
-/* line 147, ../sass/app.scss */
+/* line 163, ../sass/app.scss */
 .reset-btn:active {
   opacity: .8;
 }
-/* line 151, ../sass/app.scss */
+/* line 167, ../sass/app.scss */
 .reset-btn i {
   line-height: 30px;
 }
 @media (min-width: 1200px) {
-  /* line 129, ../sass/app.scss */
+  /* line 145, ../sass/app.scss */
   .reset-btn {
     left: 50%;
     right: 0;
     margin-left: -60px;
   }
-  /* line 160, ../sass/app.scss */
+  /* line 176, ../sass/app.scss */
   .reset-btn i {
     margin-left: 1px;
   }
 }
 
-/* line 166, ../sass/app.scss */
+/* line 182, ../sass/app.scss */
 .fire-btn {
   position: fixed;
   bottom: 2%;
@@ -8904,12 +8934,12 @@ body {
   cursor: pointer;
   font-weight: bold;
 }
-/* line 184, ../sass/app.scss */
+/* line 200, ../sass/app.scss */
 .fire-btn:active {
   opacity: .8;
 }
 @media (min-width: 1200px) {
-  /* line 166, ../sass/app.scss */
+  /* line 182, ../sass/app.scss */
   .fire-btn {
     left: 50%;
     right: 0;
@@ -8917,7 +8947,7 @@ body {
   }
 }
 
-/* line 195, ../sass/app.scss */
+/* line 211, ../sass/app.scss */
 .fire-btn-shadow {
   position: fixed;
   bottom: 2%;
@@ -8933,7 +8963,7 @@ body {
   box-shadow: 0px 8px 36px -9px black;
 }
 @media (min-width: 1200px) {
-  /* line 195, ../sass/app.scss */
+  /* line 211, ../sass/app.scss */
   .fire-btn-shadow {
     left: 50%;
     right: 0;
@@ -8941,7 +8971,7 @@ body {
   }
 }
 
-/* line 216, ../sass/app.scss */
+/* line 232, ../sass/app.scss */
 .reset-btn-shadow {
   position: fixed;
   bottom: 2%;
@@ -8958,7 +8988,7 @@ body {
   box-shadow: 0px 8px 36px -9px black;
 }
 @media (min-width: 1200px) {
-  /* line 216, ../sass/app.scss */
+  /* line 232, ../sass/app.scss */
   .reset-btn-shadow {
     left: 50%;
     right: 0;
@@ -8966,31 +8996,31 @@ body {
   }
 }
 
-/* line 238, ../sass/app.scss */
+/* line 254, ../sass/app.scss */
 .center {
   margin: 0 auto;
 }
 
-/* line 242, ../sass/app.scss */
+/* line 258, ../sass/app.scss */
 .text-center {
   text-align: center;
 }
 
-/* line 247, ../sass/app.scss */
+/* line 263, ../sass/app.scss */
 .park-nav ul {
   list-style: none;
   margin: 0;
   padding: 0;
 }
 @media (min-width: 768px) {
-  /* line 247, ../sass/app.scss */
+  /* line 263, ../sass/app.scss */
   .park-nav ul {
     width: 640px;
     margin: 0 auto;
     text-align: center;
   }
 }
-/* line 259, ../sass/app.scss */
+/* line 275, ../sass/app.scss */
 .park-nav ul li {
   position: relative;
   height: 150px;
@@ -8998,7 +9028,7 @@ body {
   margin: 5px 0 5px 0;
 }
 @media (min-width: 768px) {
-  /* line 259, ../sass/app.scss */
+  /* line 275, ../sass/app.scss */
   .park-nav ul li {
     width: 318px;
     /*account for padding*/
@@ -9007,7 +9037,7 @@ body {
     display: inline-block;
   }
 }
-/* line 273, ../sass/app.scss */
+/* line 289, ../sass/app.scss */
 .park-nav ul li p {
   position: absolute;
   bottom: 0;
@@ -9033,7 +9063,7 @@ body {
   -o-transition: all 0.2s ease-out;
   transition: all 0.2s ease-out;
 }
-/* line 295, ../sass/app.scss */
+/* line 311, ../sass/app.scss */
 .park-nav ul li:hover p {
   -webkit-transform: translate(-5px, 0px);
   -moz-transform: translate(-5px, 0px);
@@ -9042,7 +9072,7 @@ body {
   transform: translate(-5px, 0px);
 }
 
-/* line 303, ../sass/app.scss */
+/* line 319, ../sass/app.scss */
 .li-bg {
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
@@ -9051,20 +9081,20 @@ body {
   transition: all 0.2s ease-in-out;
   opacity: .9;
 }
-/* line 306, ../sass/app.scss */
+/* line 322, ../sass/app.scss */
 .li-bg:hover {
   cursor: pointer;
 }
-/* line 309, ../sass/app.scss */
+/* line 325, ../sass/app.scss */
 .li-bg:hover .li-overlay {
   background-color: #fff;
 }
-/* line 313, ../sass/app.scss */
+/* line 329, ../sass/app.scss */
 .li-bg:active {
   opacity: 1;
 }
 
-/* line 318, ../sass/app.scss */
+/* line 334, ../sass/app.scss */
 .li-overlay {
   position: absolute;
   top: 72.5%;
@@ -9080,7 +9110,7 @@ body {
   transition: all 0.5s ease-in-out;
 }
 
-/* line 329, ../sass/app.scss */
+/* line 345, ../sass/app.scss */
 .li-overlay-white {
   position: absolute;
   top: 69%;
@@ -9090,7 +9120,7 @@ body {
   background-color: #fff;
 }
 
-/* line 338, ../sass/app.scss */
+/* line 354, ../sass/app.scss */
 .svg-check {
   display: none;
   position: absolute;
@@ -9102,7 +9132,7 @@ body {
   height: 40px;
 }
 
-/* line 349, ../sass/app.scss */
+/* line 365, ../sass/app.scss */
 footer {
   color: #aec1ae;
   font-size: 10px;
@@ -9110,17 +9140,33 @@ footer {
 }
 
 /* TRANSITION SPECIFIC */
-/* line 361, ../sass/app.scss */
+/* line 377, ../sass/app.scss */
 .ani-left {
   -webkit-transform: translate3d(-2000px, 0, 0);
   -moz-transform: translate3d(-2000px, 0, 0);
   -ms-transform: translate3d(-2000px, 0, 0);
   -o-transform: translate3d(-2000px, 0, 0);
   transform: translate3d(-2000px, 0, 0);
+  opacity: 0;
+}
+
+/* line 382, ../sass/app.scss */
+.ani-right {
+  -webkit-transform: translate3d(2000px, 0, 0);
+  -moz-transform: translate3d(2000px, 0, 0);
+  -ms-transform: translate3d(2000px, 0, 0);
+  -o-transform: translate3d(2000px, 0, 0);
+  transform: translate3d(2000px, 0, 0);
+  opacity: 1;
+}
+
+/* line 387, ../sass/app.scss */
+.ani-fadeOut {
+  opacity: 0;
 }
 
 /* ANIMATION SPECIFIC */
-/* line 371, ../sass/app.scss */
+/* line 397, ../sass/app.scss */
 .zoom-check {
   -webkit-animation: zoomAni 0.5s forwards;
   -moz-animation: zoomAni 0.5s forwards;
@@ -9129,7 +9175,7 @@ footer {
   animation: zoomAni 0.5s forwards;
 }
 
-/* line 375, ../sass/app.scss */
+/* line 401, ../sass/app.scss */
 .zoom-check-reverse {
   -webkit-animation: zoomAniRev 0.5s forwards;
   -moz-animation: zoomAniRev 0.5s forwards;
@@ -9138,7 +9184,7 @@ footer {
   animation: zoomAniRev 0.5s forwards;
 }
 
-/* line 379, ../sass/app.scss */
+/* line 405, ../sass/app.scss */
 .zoom-check-shadow {
   -webkit-animation: zoomAniRevShadow 0.5s forwards;
   -moz-animation: zoomAniRevShadow 0.5s forwards;
@@ -9147,7 +9193,7 @@ footer {
   animation: zoomAniRevShadow 0.5s forwards;
 }
 
-/* line 383, ../sass/app.scss */
+/* line 409, ../sass/app.scss */
 .zoom-check-shadow-reverse {
   -webkit-animation: zoomAniRevShadowRev 0.5s forwards;
   -moz-animation: zoomAniRevShadowRev 0.5s forwards;
@@ -9156,7 +9202,7 @@ footer {
   animation: zoomAniRevShadowRev 0.5s forwards;
 }
 
-/* line 387, ../sass/app.scss */
+/* line 413, ../sass/app.scss */
 .slide-center {
   -webkit-animation: slideAni 0.5s forwards;
   -moz-animation: slideAni 0.5s forwards;
