--- a/resources/assets/stylesheets/app.css
+++ b/resources/assets/stylesheets/app.css
@@ -8840,11 +8840,10 @@ body {
   overflow: hidden;
   width: 768px;
   max-width: 100%;
-  background-color: grey;
 }
 
 /* GENERAL CLASSES */
-/* line 129, ../sass/app.scss */
+/* line 128, ../sass/app.scss */
 .title {
   letter-spacing: 10px;
   -webkit-transition: all 0.1s ease-in-out;
@@ -8854,7 +8853,7 @@ body {
   transition: all 0.1s ease-in-out;
 }
 
-/* line 134, ../sass/app.scss */
+/* line 133, ../sass/app.scss */
 .sub-title {
   letter-spacing: 3px;
   -webkit-transition: all 0.1s ease-in-out;
@@ -8864,7 +8863,7 @@ body {
   transition: all 0.1s ease-in-out;
 }
 
-/* line 139, ../sass/app.scss */
+/* line 138, ../sass/app.scss */
 .description {
   font-size: 16px;
   padding: 0 10px;
@@ -8875,7 +8874,7 @@ body {
   transition: all 0.1s ease-in-out;
 }
 
-/* line 145, ../sass/app.scss */
+/* line 144, ../sass/app.scss */
 .reset-btn {
   position: fixed;
   bottom: 2%;
@@ -8894,22 +8893,22 @@ body {
   cursor: pointer;
   font-weight: bold;
 }
-/* line 163, ../sass/app.scss */
+/* line 162, ../sass/app.scss */
 .reset-btn:active {
   opacity: .8;
 }
-/* line 167, ../sass/app.scss */
+/* line 166, ../sass/app.scss */
 .reset-btn i {
   line-height: 30px;
 }
 
-/* line 182, ../sass/app.scss */
+/* line 181, ../sass/app.scss */
 .gmap {
   width: 100%;
   height: 40%;
 }
 
-/* line 187, ../sass/app.scss */
+/* line 186, ../sass/app.scss */
 .fire-btn {
   position: fixed;
   bottom: 2%;
@@ -8928,12 +8927,12 @@ body {
   cursor: pointer;
   font-weight: bold;
 }
-/* line 205, ../sass/app.scss */
+/* line 204, ../sass/app.scss */
 .fire-btn:active {
   opacity: .8;
 }
 
-/* line 216, ../sass/app.scss */
+/* line 215, ../sass/app.scss */
 .fire-btn-shadow {
   position: fixed;
   bottom: 2%;
@@ -8949,7 +8948,7 @@ body {
   box-shadow: 0px 8px 36px -9px black;
 }
 
-/* line 237, ../sass/app.scss */
+/* line 236, ../sass/app.scss */
 .reset-btn-shadow {
   position: fixed;
   bottom: 2%;
@@ -8966,31 +8965,31 @@ body {
   box-shadow: 0px 8px 36px -9px black;
 }
 
-/* line 259, ../sass/app.scss */
+/* line 258, ../sass/app.scss */
 .center {
   margin: 0 auto;
 }
 
-/* line 263, ../sass/app.scss */
+/* line 262, ../sass/app.scss */
 .text-center {
   text-align: center;
 }
 
-/* line 268, ../sass/app.scss */
+/* line 267, ../sass/app.scss */
 .park-nav ul {
   list-style: none;
   margin: 0;
   padding: 0;
 }
 @media (min-width: 768px) {
-  /* line 268, ../sass/app.scss */
+  /* line 267, ../sass/app.scss */
   .park-nav ul {
     width: 640px;
     margin: 0 auto;
     text-align: center;
   }
 }
-/* line 280, ../sass/app.scss */
+/* line 279, ../sass/app.scss */
 .park-nav ul li {
   position: relative;
   height: 150px;
@@ -8998,7 +8997,7 @@ body {
   margin: 5px 0 5px 0;
 }
 @media (min-width: 768px) {
-  /* line 280, ../sass/app.scss */
+  /* line 279, ../sass/app.scss */
   .park-nav ul li {
     width: 318px;
     /*account for padding*/
@@ -9007,7 +9006,7 @@ body {
     display: inline-block;
   }
 }
-/* line 294, ../sass/app.scss */
+/* line 293, ../sass/app.scss */
 .park-nav ul li p {
   position: absolute;
   bottom: 0;
@@ -9033,7 +9032,7 @@ body {
   -o-transition: all 0.2s ease-out;
   transition: all 0.2s ease-out;
 }
-/* line 316, ../sass/app.scss */
+/* line 315, ../sass/app.scss */
 .park-nav ul li:hover p {
   -webkit-transform: translate(-5px, 0px);
   -moz-transform: translate(-5px, 0px);
@@ -9042,7 +9041,7 @@ body {
   transform: translate(-5px, 0px);
 }
 
-/* line 324, ../sass/app.scss */
+/* line 323, ../sass/app.scss */
 .li-bg {
   -webkit-transition: all 0.2s ease-in-out;
   -moz-transition: all 0.2s ease-in-out;
@@ -9051,20 +9050,20 @@ body {
   transition: all 0.2s ease-in-out;
   opacity: .9;
 }
-/* line 327, ../sass/app.scss */
+/* line 326, ../sass/app.scss */
 .li-bg:hover {
   cursor: pointer;
 }
-/* line 330, ../sass/app.scss */
+/* line 329, ../sass/app.scss */
 .li-bg:hover .li-overlay {
   background-color: #fff;
 }
-/* line 334, ../sass/app.scss */
+/* line 333, ../sass/app.scss */
 .li-bg:active {
   opacity: 1;
 }
 
-/* line 339, ../sass/app.scss */
+/* line 338, ../sass/app.scss */
 .li-overlay {
   position: absolute;
   top: 72.5%;
@@ -9080,7 +9079,7 @@ body {
   transition: all 0.5s ease-in-out;
 }
 
-/* line 350, ../sass/app.scss */
+/* line 349, ../sass/app.scss */
 .li-overlay-white {
   position: absolute;
   top: 69%;
@@ -9090,7 +9089,46 @@ body {
   background-color: #fff;
 }
 
-/* line 359, ../sass/app.scss */
+/* line 358, ../sass/app.scss */
+.park-distance-ul {
+  overflow: hidden;
+  width: 100%;
+  height: 76px;
+}
+
+/* line 364, ../sass/app.scss */
+.park-distance-ul ul {
+  margin: 0;
+  padding: 0;
+  overflow-x: scroll;
+  white-space: nowrap;
+  padding-bottom: 17px;
+}
+
+/* line 372, ../sass/app.scss */
+.park-distance-ul ul li {
+  list-style: none;
+  display: inline-block;
+  height: 75px;
+  width: 75px;
+  border: 1px solid gray;
+  margin: 0;
+  font-size: 0;
+  vertical-align: middle;
+  text-align: center;
+}
+
+/* line 384, ../sass/app.scss */
+.park-distance-ul ul li span {
+  font-size: 20px;
+  display: inline-block;
+  position: relative;
+  top: 50%;
+  left: 0;
+  margin-top: -14px;
+}
+
+/* line 393, ../sass/app.scss */
 .svg-check {
   display: none;
   position: absolute;
@@ -9102,15 +9140,26 @@ body {
   height: 40px;
 }
 
-/* line 370, ../sass/app.scss */
+/* line 404, ../sass/app.scss */
 footer {
   color: #aec1ae;
   font-size: 10px;
   margin: 10px;
 }
 
+@media all and (min-width: 768px) {
+  /* line 411, ../sass/app.scss */
+  .park-distance-ul {
+    height: auto;
+  }
+
+  /* line 415, ../sass/app.scss */
+  .park-distance-ul ul {
+    padding-bottom: 0;
+  }
+}
 /* TRANSITION SPECIFIC */
-/* line 382, ../sass/app.scss */
+/* line 426, ../sass/app.scss */
 .ani-left {
   -webkit-transform: translate3d(-2000px, 0, 0);
   -moz-transform: translate3d(-2000px, 0, 0);
@@ -9120,7 +9169,7 @@ footer {
   opacity: 0;
 }
 
-/* line 387, ../sass/app.scss */
+/* line 431, ../sass/app.scss */
 .ani-right {
   -webkit-transform: translate3d(0, 0, 0);
   -moz-transform: translate3d(0, 0, 0);
@@ -9130,18 +9179,18 @@ footer {
   opacity: 1;
 }
 
-/* line 392, ../sass/app.scss */
+/* line 436, ../sass/app.scss */
 .ani-fadeOut {
   opacity: 0;
 }
 
-/* line 396, ../sass/app.scss */
+/* line 440, ../sass/app.scss */
 .ani-fadeIn {
   opacity: 1;
 }
 
 /* ANIMATION SPECIFIC */
-/* line 406, ../sass/app.scss */
+/* line 450, ../sass/app.scss */
 .zoom-check {
   -webkit-animation: zoomAni 0.5s forwards;
   -moz-animation: zoomAni 0.5s forwards;
@@ -9150,7 +9199,7 @@ footer {
   animation: zoomAni 0.5s forwards;
 }
 
-/* line 410, ../sass/app.scss */
+/* line 454, ../sass/app.scss */
 .zoom-check-reverse {
   -webkit-animation: zoomAniRev 0.5s forwards;
   -moz-animation: zoomAniRev 0.5s forwards;
@@ -9159,7 +9208,7 @@ footer {
   animation: zoomAniRev 0.5s forwards;
 }
 
-/* line 414, ../sass/app.scss */
+/* line 458, ../sass/app.scss */
 .zoom-check-shadow {
   -webkit-animation: zoomAniRevShadow 0.5s forwards;
   -moz-animation: zoomAniRevShadow 0.5s forwards;
@@ -9168,7 +9217,7 @@ footer {
   animation: zoomAniRevShadow 0.5s forwards;
 }
 
-/* line 418, ../sass/app.scss */
+/* line 462, ../sass/app.scss */
 .zoom-check-shadow-reverse {
   -webkit-animation: zoomAniRevShadowRev 0.5s forwards;
   -moz-animation: zoomAniRevShadowRev 0.5s forwards;
@@ -9177,7 +9226,7 @@ footer {
   animation: zoomAniRevShadowRev 0.5s forwards;
 }
 
-/* line 422, ../sass/app.scss */
+/* line 466, ../sass/app.scss */
 .slide-center {
   -webkit-animation: slideAni 0.5s forwards;
   -moz-animation: slideAni 0.5s forwards;
