--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -393,8 +393,12 @@ body {
 }
 
 .park-distance-ul ul li:hover {
-	opacity: .5;
+	opacity: .6;
 	@include transitionStyle(all, .1s, ease-in-out);
+}
+
+.park-selected {
+	opacity: .4;
 }
 
 .park-distance-ul ul li span {
