--- a/resources/assets/stylesheets/app.css
+++ b/resources/assets/stylesheets/app.css
@@ -9135,7 +9135,7 @@ body {
 
 /* line 395, ../sass/app.scss */
 .park-distance-ul ul li:hover {
-  opacity: .5;
+  opacity: .6;
   -webkit-transition: all 0.1s ease-in-out;
   -moz-transition: all 0.1s ease-in-out;
   -ms-transition: all 0.1s ease-in-out;
@@ -9144,6 +9144,11 @@ body {
 }
 
 /* line 400, ../sass/app.scss */
+.park-selected {
+  opacity: .4;
+}
+
+/* line 404, ../sass/app.scss */
 .park-distance-ul ul li span {
   font-size: 20px;
   display: inline-block;
@@ -9154,7 +9159,7 @@ body {
   color: #524231;
 }
 
-/* line 410, ../sass/app.scss */
+/* line 414, ../sass/app.scss */
 .svg-check {
   display: none;
   position: absolute;
@@ -9166,7 +9171,7 @@ body {
   height: 40px;
 }
 
-/* line 421, ../sass/app.scss */
+/* line 425, ../sass/app.scss */
 footer {
   color: #aec1ae;
   font-size: 10px;
@@ -9174,18 +9179,18 @@ footer {
 }
 
 @media all and (min-width: 768px) {
-  /* line 428, ../sass/app.scss */
+  /* line 432, ../sass/app.scss */
   .park-distance-ul {
     height: auto;
   }
 
-  /* line 432, ../sass/app.scss */
+  /* line 436, ../sass/app.scss */
   .park-distance-ul ul {
     padding-bottom: 0;
   }
 }
 /* TRANSITION SPECIFIC */
-/* line 443, ../sass/app.scss */
+/* line 447, ../sass/app.scss */
 .ani-left {
   -webkit-transform: translate3d(-2000px, 0, 0);
   -moz-transform: translate3d(-2000px, 0, 0);
@@ -9195,7 +9200,7 @@ footer {
   opacity: 0;
 }
 
-/* line 448, ../sass/app.scss */
+/* line 452, ../sass/app.scss */
 .ani-right {
   -webkit-transform: translate3d(0, 0, 0);
   -moz-transform: translate3d(0, 0, 0);
@@ -9205,18 +9210,18 @@ footer {
   opacity: 1;
 }
 
-/* line 453, ../sass/app.scss */
+/* line 457, ../sass/app.scss */
 .ani-fadeOut {
   opacity: 0;
 }
 
-/* line 457, ../sass/app.scss */
+/* line 461, ../sass/app.scss */
 .ani-fadeIn {
   opacity: 1;
 }
 
 /* ANIMATION SPECIFIC */
-/* line 467, ../sass/app.scss */
+/* line 471, ../sass/app.scss */
 .zoom-check {
   -webkit-animation: zoomAni 0.5s forwards;
   -moz-animation: zoomAni 0.5s forwards;
@@ -9225,7 +9230,7 @@ footer {
   animation: zoomAni 0.5s forwards;
 }
 
-/* line 471, ../sass/app.scss */
+/* line 475, ../sass/app.scss */
 .zoom-check-reverse {
   -webkit-animation: zoomAniRev 0.5s forwards;
   -moz-animation: zoomAniRev 0.5s forwards;
@@ -9234,7 +9239,7 @@ footer {
   animation: zoomAniRev 0.5s forwards;
 }
 
-/* line 475, ../sass/app.scss */
+/* line 479, ../sass/app.scss */
 .zoom-check-shadow {
   -webkit-animation: zoomAniRevShadow 0.5s forwards;
   -moz-animation: zoomAniRevShadow 0.5s forwards;
@@ -9243,7 +9248,7 @@ footer {
   animation: zoomAniRevShadow 0.5s forwards;
 }
 
-/* line 479, ../sass/app.scss */
+/* line 483, ../sass/app.scss */
 .zoom-check-shadow-reverse {
   -webkit-animation: zoomAniRevShadowRev 0.5s forwards;
   -moz-animation: zoomAniRevShadowRev 0.5s forwards;
@@ -9252,7 +9257,7 @@ footer {
   animation: zoomAniRevShadowRev 0.5s forwards;
 }
 
-/* line 483, ../sass/app.scss */
+/* line 487, ../sass/app.scss */
 .slide-center {
   -webkit-animation: slideAni 0.5s forwards;
   -moz-animation: slideAni 0.5s forwards;
